--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "youtube-chat": "^2.2.0"
